RESOLVED FIXED281731
[scroll-animations] WPT tests `scroll-timelines/setting-start-time.html` and `scroll-timelines/setting-current-time.html` under `scroll-animations` are crashes
https://bugs.webkit.org/show_bug.cgi?id=281731
Summary [scroll-animations] WPT tests `scroll-timelines/setting-start-time.html` and ...
Antoine Quint
Reported 2024-10-18 00:56:21 PDT
The WPT tests `scroll-timelines/setting-start-time.html` and `scroll-timelines/setting-current-time.html` under `scroll-animations` crash.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-18 00:56:31 PDT
Antoine Quint
Comment 2 2024-10-18 01:01:47 PDT
Antoine Quint
Comment 3 2024-10-18 01:02:54 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/48691
EWS
Comment 4 2024-10-18 04:27:35 PDT
Committed 285390@main (be9c3ff059a1): <https://commits.webkit.org/285390@main> Reviewed commits have been landed. Closing PR #35417 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.