Source/WebCore/animation/CSSNumberishTime.cpp
@@ -110,10 +110,7 @@ std::optional<double> CSSNumberishTime::percentage() const
 
 bool CSSNumberishTime::isValid() const
 {
-    // FIXME: We should consider a number valid as long as it's not "Unknown"
-    // but currently only mark time values as valid until we can do per-timeline
-    // validation when processing a value through the JS APIs that consume them.
-    return m_type == Type::Time;
+    return m_type != Type::Unknown;
 }
 
 bool CSSNumberishTime::isInfinity() const
